tdf#160806 tdf#160837 gtk3 a11y: Don't use idle

Don't use and idle to call the (deprecated) ATK focus tracker,
but do so right away.

Since this is no longer called in an idle, the SolarMutexGuard
should also no longer be needed, so drop it.

It's not clear why the focus event was handled in an
idle ever since

    commit 3b5c378706e465f59d78f95fddc5eff9e1a8fe19
    Author: Rüdiger Timm <rt@openoffice.org>
    Date:   Fri May 5 09:58:25 2006 +0000

        INTEGRATION: CWS atkbridge (1.1.2); FILE ADDED
        2006/04/27 14:47:54 obr 1.1.2.17: #134576# move focus clearing code to atkwindow.cxx
        2006/04/27 08:18:11 obr 1.1.2.16: #134571# toolbox items are no VCL windows
        2006/03/31 12:19:40 obr 1.1.2.15: #i63583# eliminated warnings
        2006/03/03 11:07:09 obr 1.1.2.14: #i47890# fixed a crash when event source does not implement XAccessibleContext
        2006/03/01 11:04:11 obr 1.1.2.13: #i47890# recursivly attach listeners to windows of type TREELISTBOX
        2006/02/16 11:07:11 obr 1.1.2.12: #i47890# ORoadmapIDHyperLabel is derived from FixedText
        2006/02/15 12:42:56 obr 1.1.2.11: #i47890# simulate focus events for page tabs
        2006/02/07 09:26:21 obr 1.1.2.10: #i47890# reduce amount of focus notifications
        2006/01/12 13:56:14 obr 1.1.2.9: #i47890# Solaris compile fixes
        2006/01/05 14:06:32 obr 1.1.2.8: #i47890# override toolkit name and version and reworked bridge initialization
        2005/11/16 15:57:57 obr 1.1.2.7: fixed for menu state ARMED only valid during notification
        2005/10/24 07:36:05 obr 1.1.2.6: #i47890# reset focused object on WINDOW_DEACTIVATE
        2005/10/20 11:57:32 obr 1.1.2.5: #i47890# initially set name and description + disabled some tracing
        2005/10/20 07:09:12 obr 1.1.2.4: #i47890# made cxx files standalone, avoid queryInterface on each API call and demacrofied try/catch to include appropriate warnings
        2005/09/28 07:24:13 obr 1.1.2.3: #i47890# changed ref-counting/life cycle once again, adjust tree and role of dialogs and filter sub-menu windows
        2005/09/26 11:01:01 obr 1.1.2.2: #i47890# reworked lifecycle of atk wrapper objects
        2005/06/14 13:57:24 obr 1.1.2.1: #i47890# global focus event listening stuff

With this in place, watching for "object:focus" events in
Accerciser still shows such an event when e.g. tabbing
through the standard toolbar in Writer. Example for when
the "Save" button receives focus:

    37.9 focus:(0, 0, 0)
            source: [push button | Save]
            application: [application | soffice]

This is one step to port from the use of that deprecated
focus tracker and clean up a11y event handling in the gtk3 VCL plugin.
(Take one step at a time to keep the scope of the changes clearer
and simplify identifying causes of any potential regressions.)

(`git show --ignore-space-change` helps to see the
"actual change" more clearly).

Change-Id: Ia71b70bdf5d9db8fbb389f3c7366af48ee723af7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167206
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins